<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"

            android:contentDescription="@string/Description"
            android:src="@drawable/ic_nights"

            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NightMode"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NightModeDescription"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnTheme"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/Description"
            android:src="@drawable/ic_bluetooth"

            app:tint="@color/black" />

        <LinearLayout

            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/Bluetooth"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/BluetoothDescription"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
  <LinearLayout
      android:gravity="center_vertical"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
      <TextView
          android:layout_marginHorizontal="60dp"
          android:textSize="20sp"
          android:text="@string/Volume"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <LinearLayout
          android:layout_gravity="bottom"
          android:gravity="fill_vertical"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <ImageView
              android:layout_width="30dp"
              android:layout_marginHorizontal="10dp"
              android:contentDescription="@string/BluetoothDescription"
              android:src="@drawable/ic_speaker"
              android:layout_height="30dp"/>

          <com.google.android.material.slider.RangeSlider
              android:id="@+id/rsVolume"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:valueFrom="0"
              android:valueTo="100" />


      </LinearLayout>


  </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>